<resources>
    <string name="app_name">Controly</string>

    <!--Content Descriptions-->
    <string name="key_icon_content_description">This is the icon of the keyView button</string>
    <string name="logo_content_description">This is the logo of the application.</string>

    <!--View-->
    <string name="circular_image_view_content_description">This is the image view of the circular image view.</string>

    <!--Login page-->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password?</string>

    <string name="message_loading">Loading</string>

    <!--Preferences-->
    <string name="auto_login">Auto login</string>
    <string name="authentication_category">AUTHENTICATION</string>
    <string name="edit_profile">Edit Profile</string>

    <!--Create Keyboard-->
    <string name="create_keyboard_activity_title">New Keyboard</string>
    <string name="default_keyboard_name">Untitled</string>
    <string name="default_keyboard_image">https://api.controly.net/ControlyApi/UserImages/defaultKeyboard.png</string>

    <!--Main Activity-->
    <string name="launch_menu">Main Menu</string>
    <string name="search">Search</string>
    <string name="main_activity_search_bar_hint">Let\'s find a controller</string>
    <string name="keyboard_list_empty">You have no keyboards</string>

    <!--Menu-->
    <string name="create_cap">CREATE</string>
    <string name="events">Events</string>

    <!--Add KeyView-->
    <string name="create_event">Create Event</string>

    <!--Events Activity-->
    <string name="events_activity_search_bar_hint">Search Events</string>

    <!--SelectLocationActivity-->
    <string name="locations_activity_search_bar_hint">Search my locations</string>
    <string name="locations_activity_toolbar_title">Event location</string>
    <string name="locations_activity_crate_location">Create location</string>
    <string name="select_action">Select an action</string>
    <string name="device_selection_activity_titile">Select a device</string>
    <string name="event_trigger">Event trigger</string>
    <string name="my_automations">My Automations</string>
    <string name="save_key">Save key</string>
    <string name="my_actions">My Actions</string>
    <string name="new_automation_dialog_text">How should we name your new automation?</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
</resources>
